--- a/v/latest/index.html
+++ b/v/latest/index.html
@@ -23,16 +23,16 @@
 <header id="title-block-header">
 <h1 class="title">RO-Index: A survey of Research Object usage</h1>
 </header>
-<p><small><em> This manuscript (<a href="https://stain.github.io/ro-index-paper/v/6645610bab8fb62755bb49478e5910a796fc454c/">permalink</a>) was automatically generated from <a href="https://github.com/stain/ro-index-paper/tree/6645610bab8fb62755bb49478e5910a796fc454c">stain/ro-index-paper@6645610</a> on August 19, 2019. </em></small></p>
+<p><small><em> This manuscript (<a href="https://stain.github.io/ro-index-paper/v/7db09b3eed6838218d009a86ebcc433bade05ca1/">permalink</a>) was automatically generated from <a href="https://github.com/stain/ro-index-paper/tree/7db09b3eed6838218d009a86ebcc433bade05ca1">stain/ro-index-paper@7db09b3</a> on August 19, 2019. </em></small></p>
 <h2 id="authors">Authors</h2>
 <ul>
 <li><p><strong>Stian Soiland-Reyes</strong><br> <img src="images/orcid.svg" alt="ORCID icon" class="inline_icon" /> <a href="https://orcid.org/0000-0001-9842-9718">0000-0001-9842-9718</a> · <img src="images/github.svg" alt="GitHub icon" class="inline_icon" /> <a href="https://github.com/stain">stain</a> · <img src="images/twitter.svg" alt="Twitter icon" class="inline_icon" /> <a href="https://twitter.com/soilandreyes">soilandreyes</a><br> <small> Department of Computer Science, The University of Manchester, UK; Informatics Institute, Faculty of Science, University of Amsterdam, NL · Funded by BioExcel-2 (European Commission H2020-INFRAEDI-02-2018-823830) </small></p></li>
 <li><p><strong>Paul Groth</strong><br> <img src="images/orcid.svg" alt="ORCID icon" class="inline_icon" /> <a href="https://orcid.org/0000-0003-0183-6910">0000-0003-0183-6910</a> · <img src="images/github.svg" alt="GitHub icon" class="inline_icon" /> <a href="https://github.com/pgroth">pgroth</a><br> <small> Informatics Institute, Faculty of Science, University of Amsterdam, NL </small></p></li>
 </ul>
-<h2 id="abstract" class="page_break_before">Abstract</h2>
-<h2 id="introduction" class="page_break_before">Introduction</h2>
+<h2 id="abstract">Abstract</h2>
+<h2 id="introduction">Introduction</h2>
 <h1 id="section"></h1>
-<h2 id="protocol" class="page_break_before">Protocol</h2>
+<h2 id="protocol">Protocol</h2>
 <!-- From https://f1000research.com/for-authors/article-guidelines/study-protocols
 
      
@@ -200,8 +200,8 @@ Ethics policies: All research must have been conducted within an appropriate eth
 <li></li>
 </ol>
 <p>https://zenodo.org/communities/ro/?page=1&amp;size=20</p>
-<h2 id="conclusionsdiscussion" class="page_break_before">Conclusions/Discussion</h2>
-<h2 id="data-and-software-availability" class="page_break_before">Data (and Software) Availability</h2>
+<h2 id="conclusionsdiscussion">Conclusions/Discussion</h2>
+<h2 id="data-and-software-availability">Data (and Software) Availability</h2>
 <!--
 From https://f1000research.com/for-authors/article-guidelines/study-protocols
 
@@ -219,7 +219,7 @@ If you have any extended data, please deposit these materials in an approved rep
 Please note, information which can be used to directly identify participants should not be included in underlying and extended datasets, unless they have provided explicit permission to share their details. Please see our data guidelines for further information. 
 
 -->
-<h2 id="author-contributions" class="page_break_before">Author contributions</h2>
+<h2 id="author-contributions">Author contributions</h2>
 <!--
 http://casrai.org/credit
 -->
@@ -239,10 +239,10 @@ http://casrai.org/credit
 <li>Writing – Original Draft Preparation: SSR</li>
 <li>Writing – Review &amp; Editing:</li>
 </ul>
-<h2 id="competing-interests" class="page_break_before">Competing interests</h2>
-<h2 id="grant-information" class="page_break_before">Grant Information</h2>
+<h2 id="competing-interests">Competing interests</h2>
+<h2 id="grant-information">Grant Information</h2>
 <p>This work has been done as part of the BioExcel CoE (<a href="https://www.bioexcel.eu/">www.bioexcel.eu</a>), a project funded by the European Union contracts <a href="https://cordis.europa.eu/project/id/823830">H2020-INFRAEDI-02-2018-823830</a>, <a href="https://cordis.europa.eu/project/id/675728">H2020-EINFRA-2015-1-675728</a>.</p>
-<h2 id="references" class="page_break_before">References</h2>
+<h2 id="references">References</h2>
 <!-- Explicitly insert bibliography here -->
 <div id="refs" role="doc-bibliography">
 <div id="ref-sRYUCzCq">
