--- a/manuscript.html
+++ b/manuscript.html
@@ -23,7 +23,7 @@
 <header id="title-block-header">
 <h1 class="title">RO-Index: A survey of Research Object usage</h1>
 </header>
-<p><small><em> This manuscript (<a href="https://stain.github.io/ro-index-paper/v/df7f35ed0ee58a2d8721ef431d2bcf412a5d13e6/">permalink</a>) was automatically generated from <a href="https://github.com/stain/ro-index-paper/tree/df7f35ed0ee58a2d8721ef431d2bcf412a5d13e6">stain/ro-index-paper@df7f35e</a> on August 20, 2019. </em></small></p>
+<p><small><em> This manuscript (<a href="https://stain.github.io/ro-index-paper/v/c9bb0fbc5643289ed26e7afcdca9428a0e1716c7/">permalink</a>) was automatically generated from <a href="https://github.com/stain/ro-index-paper/tree/c9bb0fbc5643289ed26e7afcdca9428a0e1716c7">stain/ro-index-paper@c9bb0fb</a> on August 20, 2019. </em></small></p>
 <h2 id="authors">Authors</h2>
 <ul>
 <li><p><strong>Stian Soiland-Reyes</strong><br> <img src="images/orcid.svg" alt="ORCID icon" class="inline_icon" /> <a href="https://orcid.org/0000-0001-9842-9718">0000-0001-9842-9718</a> · <img src="images/github.svg" alt="GitHub icon" class="inline_icon" /> <a href="https://github.com/stain">stain</a> · <img src="images/twitter.svg" alt="Twitter icon" class="inline_icon" /> <a href="https://twitter.com/soilandreyes">soilandreyes</a><br> <small> Department of Computer Science, The University of Manchester, UK; Informatics Institute, Faculty of Science, University of Amsterdam, NL · Funded by BioExcel-2 (European Commission H2020-INFRAEDI-02-2018-823830) </small></p></li>
@@ -223,7 +223,7 @@ Ethics policies: All research must have been conducted within an appropriate eth
 <p>https://zenodo.org/communities/ro/?page=1&amp;size=20</p>
 <p>https://developers.zenodo.org/#metadata-formats</p>
 <h4 id="prototype-workflow">Prototype workflow</h4>
-<p>A <a href="https://github.com/stain/ro-index-paper/blob/master/code/data-gathering/workflows/zip-content-by-url.cwl">prototype workflow</a> is being developed using <a href="https://www.commonwl.org/">Common Workflow Language</a>, figure <a href="#fig:square-image">1</a> shows how the content of a ZIP file can be listed in a streaming mode.</p>
+<p>A <a href="https://github.com/stain/ro-index-paper/blob/master/code/data-gathering/workflows/zip-content-by-url.cwl">prototype workflow</a> is being developed using <a href="https://www.commonwl.org/">Common Workflow Language</a> <span class="citation" data-cites="Ppg8PzBL">[<a href="#ref-Ppg8PzBL" role="doc-biblioref">18</a>]</span>, figure <a href="#fig:square-image">1</a> shows how the content of a ZIP file can be listed in a streaming mode.</p>
 <figure>
 <embed src="https://view.commonwl.org/graph/svg/github.com/stain/ro-index-paper/blob/master/code/data-gathering/workflows/zip-content-by-url.cwl" id="fig:square-image" /><figcaption><span>Figure 1:</span> <strong>CWL workflow: List ZIP content by URL</strong> Visualization by CWL Viewer <a href="https://w3id.org/cwl/view/git/cd01d30ffc9e04b8804b62df5e985ebfa6f5b276/code/data-gathering/workflows/zip-content-by-url.cwl" class="uri">https://w3id.org/cwl/view/git/cd01d30ffc9e04b8804b62df5e985ebfa6f5b276/code/data-gathering/workflows/zip-content-by-url.cwl</a></figcaption>
 </figure>
@@ -373,6 +373,12 @@ DOI: <a href="https://doi.org/10.17632/6wtpgr3kbj.1">10.17632/6wtpgr3kbj.1</a></
 Vanessa Sochat<br />
 <em>GigaScience</em> (2018-03-13) <a href="https://doi.org/gdwq7f">https://doi.org/gdwq7f</a><br />
 DOI: <a href="https://doi.org/10.1093/gigascience/giy023">10.1093/gigascience/giy023</a> · PMID: <a href="https://www.ncbi.nlm.nih.gov/pubmed/29718213">29718213</a> · PMCID: <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5952957">PMC5952957</a></p>
+</div>
+<div id="ref-Ppg8PzBL">
+<p>18. <strong>Common Workflow Language, v1.0</strong><br />
+Peter Amstutz, Michael R. Crusoe, Nebojša Tijanić, Brad Chapman, John Chilton, Michael Heuer, Andrey Kartashov, Dan Leehr, Hervé Ménager, Maya Nedeljkovich, … Luka Stojanovic<br />
+<em>Figshare</em> (2016) <a href="https://doi.org/gf6ppg">https://doi.org/gf6ppg</a><br />
+DOI: <a href="https://doi.org/10.6084/m9.figshare.3115156.v2">10.6084/m9.figshare.3115156.v2</a></p>
 </div>
 </div>
 <!-- default theme -->
