--- a/v/latest/index.html
+++ b/v/latest/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
   <meta name="author" content="Stian Soiland-Reyes" />
   <meta name="author" content="Paul Groth" />
-  <meta name="dcterms.date" content="2019-08-20" />
+  <meta name="dcterms.date" content="2019-08-21" />
   <meta name="keywords" content="research object, linked data, scholarly communication, null" />
   <title>RO-Index: A survey of Research Object usage</title>
   <style>
@@ -23,7 +23,7 @@
 <header id="title-block-header">
 <h1 class="title">RO-Index: A survey of Research Object usage</h1>
 </header>
-<p><small><em> This manuscript (<a href="https://stain.github.io/ro-index-paper/v/c1a4ffb3f5a7c57219dbed826564435f2c7a62fc/">permalink</a>) was automatically generated from <a href="https://github.com/stain/ro-index-paper/tree/c1a4ffb3f5a7c57219dbed826564435f2c7a62fc">stain/ro-index-paper@c1a4ffb</a> on August 20, 2019. </em></small></p>
+<p><small><em> This manuscript (<a href="https://stain.github.io/ro-index-paper/v/91db17ba301018439f3d027ea6360fa2f1f0b3a0/">permalink</a>) was automatically generated from <a href="https://github.com/stain/ro-index-paper/tree/91db17ba301018439f3d027ea6360fa2f1f0b3a0">stain/ro-index-paper@91db17b</a> on August 21, 2019. </em></small></p>
 <h2 id="authors">Authors</h2>
 <ul>
 <li><p><strong>Stian Soiland-Reyes</strong><br> <img src="images/orcid.svg" alt="ORCID icon" class="inline_icon" /> <a href="https://orcid.org/0000-0001-9842-9718">0000-0001-9842-9718</a> · <img src="images/github.svg" alt="GitHub icon" class="inline_icon" /> <a href="https://github.com/stain">stain</a> · <img src="images/twitter.svg" alt="Twitter icon" class="inline_icon" /> <a href="https://twitter.com/soilandreyes">soilandreyes</a><br> <small> Department of Computer Science, The University of Manchester, UK; Informatics Institute, Faculty of Science, University of Amsterdam, NL · Funded by BioExcel-2 (European Commission H2020-INFRAEDI-02-2018-823830) </small></p></li>
@@ -225,7 +225,7 @@ Ethics policies: All research must have been conducted within an appropriate eth
 <h4 id="prototype-workflow">Prototype workflow</h4>
 <p>A <a href="https://github.com/stain/ro-index-paper/blob/master/code/data-gathering/workflows/zip-content-by-url.cwl">prototype workflow</a> is being developed using <a href="https://www.commonwl.org/">Common Workflow Language</a> <span class="citation" data-cites="Ppg8PzBL">[<a href="#ref-Ppg8PzBL" role="doc-biblioref">18</a>]</span>, figure <a href="#fig:square-image">1</a> shows how the content of a ZIP file can be listed in a streaming mode.</p>
 <figure>
-<embed src="https://view.commonwl.org/graph/svg/github.com/stain/ro-index-paper/blob/master/code/data-gathering/workflows/zip-content-by-url.cwl" id="fig:square-image" /><figcaption><span>Figure 1:</span> <strong>CWL workflow: List ZIP content by URL</strong> Visualization by CWL Viewer <a href="https://w3id.org/cwl/view/git/cd01d30ffc9e04b8804b62df5e985ebfa6f5b276/code/data-gathering/workflows/zip-content-by-url.cwl" class="uri">https://w3id.org/cwl/view/git/cd01d30ffc9e04b8804b62df5e985ebfa6f5b276/code/data-gathering/workflows/zip-content-by-url.cwl</a></figcaption>
+<embed src="https://w3id.org/cwl/view/git/c1a4ffb3f5a7c57219dbed826564435f2c7a62fc/code/data-gathering/workflows/zip-content-by-url.cwl?format=svg" id="fig:square-image" /><figcaption><span>Figure 1:</span> <strong>CWL workflow: List ZIP content by URL</strong> Visualization by CWL Viewer <a href="https://w3id.org/cwl/view/git/c1a4ffb3f5a7c57219dbed826564435f2c7a62fc/code/data-gathering/workflows/zip-content-by-url.cwl" class="uri">https://w3id.org/cwl/view/git/c1a4ffb3f5a7c57219dbed826564435f2c7a62fc/code/data-gathering/workflows/zip-content-by-url.cwl</a></figcaption>
 </figure>
 <h2 id="conclusionsdiscussion">Conclusions/Discussion</h2>
 <h2 id="data-and-software-availability">Data (and Software) Availability</h2>
