--- a/manuscript.html
+++ b/manuscript.html
@@ -23,7 +23,7 @@
 <header id="title-block-header">
 <h1 class="title">RO-Index: A survey of Research Object usage</h1>
 </header>
-<p><small><em> This manuscript (<a href="https://stain.github.io/ro-index-paper/v/4c2e03540e64ff4c2681e1a307cd3f41b24b07a3/">permalink</a>) was automatically generated from <a href="https://github.com/stain/ro-index-paper/tree/4c2e03540e64ff4c2681e1a307cd3f41b24b07a3">stain/ro-index-paper@4c2e035</a> on September 2, 2019. </em></small></p>
+<p><small><em> This manuscript (<a href="https://stain.github.io/ro-index-paper/v/8dacd592df81539c43e5a724b35d20e1d15f6944/">permalink</a>) was automatically generated from <a href="https://github.com/stain/ro-index-paper/tree/8dacd592df81539c43e5a724b35d20e1d15f6944">stain/ro-index-paper@8dacd59</a> on September 2, 2019. </em></small></p>
 <h2 id="authors">Authors</h2>
 <ul>
 <li><p><strong>Stian Soiland-Reyes</strong><br> <img src="images/orcid.svg" alt="ORCID icon" class="inline_icon" /> <a href="https://orcid.org/0000-0001-9842-9718">0000-0001-9842-9718</a> · <img src="images/github.svg" alt="GitHub icon" class="inline_icon" /> <a href="https://github.com/stain">stain</a> · <img src="images/twitter.svg" alt="Twitter icon" class="inline_icon" /> <a href="https://twitter.com/soilandreyes">soilandreyes</a><br> <small> Department of Computer Science, The University of Manchester, UK; Informatics Institute, Faculty of Science, University of Amsterdam, NL · Funded by BioExcel-2 (European Commission H2020-INFRAEDI-02-2018-823830) </small></p></li>
@@ -192,6 +192,7 @@ Ethics policies: All research must have been conducted within an appropriate eth
 <li><a href="https://sci-f.github.io/" class="uri">https://sci-f.github.io/</a> <span class="citation" data-cites="OMB8E9Yi">[<a href="#ref-OMB8E9Yi" role="doc-biblioref">17</a>]</span></li>
 <li><a href="https://frictionlessdata.io/specs/data-package/" class="uri">https://frictionlessdata.io/specs/data-package/</a></li>
 <li>The Journal of Research Objects <a href="http://jro.world/" class="uri">http://jro.world/</a> (see also <a href="https://docs.google.com/presentation/d/1c4eSbTbaJ2ydEujvL1AA1rWghVFesy__nEtRIZeI-kA/edit?usp=sharing">presentation</a></li>
+<li>Tonkaz <a href="https://docs.google.com/presentation/d/1YRKCM1KwHyNOz7B6AP2j5qIHjl7Ew9CnAtvXA1xSeNY/edit#slide=id.g419a3a9d09_1_93" class="uri">https://docs.google.com/presentation/d/1YRKCM1KwHyNOz7B6AP2j5qIHjl7Ew9CnAtvXA1xSeNY/edit#slide=id.g419a3a9d09_1_93</a></li>
 </ul>
 <h4 id="nd-generation-ros">2nd generation ROs</h4>
 <ul>
